--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "css-loader": "^0.26.4",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
     "express-jwt": "^5.1.0",
@@ -38,7 +39,11 @@
     "sequelize": "^3.30.1",
     "source-map-support": "^0.4.11",
     "sqlite3": "^3.1.8",
+    "style-loader": "^0.16.1",
     "universal-router": "^2.0.0",
+    "videojs-chromecast": "^2.0.8",
+    "videojs-contrib-hls": "^5.4.0",
+    "videojs-qualityselector": "^0.0.1",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
